--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^7.2.2"
   },
   "dependencies": {
-    "axios": "^1.13.2"
+    "axios": "^1.13.2",
+    "izitoast": "^1.4.0"
   }
 }
